--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -4,7 +4,7 @@
     includePaths.library = APPLICATION_PATH "/../library"
     bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
     bootstrap.class = "Bootstrap"
-    appnamespace = "Application"
+    appnamespace = "Application" 
 
     resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
     resources.frontController.params.displayExceptions = 0
@@ -15,9 +15,9 @@
     resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
     resources.db.adapter = "pdo_mysql"
     resources.db.params.host = "localhost"
-    resources.db.params.username = "cubes_school_cms"
+    resources.db.params.username = "php06"  
     resources.db.params.password = "cubes"
-    resources.db.params.dbname = "cubes_school_cms"
+    resources.db.params.dbname = "php06_cubescms"
     resources.db.isDefaultTableAdapter = true
     resources.db.params.charset = "UTF8"
 
